<resources>
	<string name="app_name">Boid Beta</string>
	<string name="no_accounts">No accounts, please add one!</string>
	<string name="account_service_name">Boid Account Service</string>
	<string name="account_service_desc">Handles loading, adding, maintaining, and removing
		your accounts. Stopping the service will disable Boid.
	</string>
	<string name="messages_priv">Show Content</string>
	<string name="message_recv">{user} sent you a Direct Message</string>
	<string name="messages_priv_desc">Show the content of direct messages in
		notifications.
	</string>
	<string name="messaging_str">Messaging</string>
	<string name="failed_check_relationship">Failed to get your relationship to {user}!</string>
	<string name="google_url">https://www.google.com/search?q=</string>
	<string name="nearby_str">Nearby</string>
	<string name="no_camera_app">Uh oh! You don\'t have any camera apps!</string>
	<string name="manual_refresh_hint">Press refresh to load</string>
	<string name="share_boid_title">Share Boid</string>
	<string name="share_boid_desc">Help spread Boid by sharing it with your friends,
		family, and even your co-workers!
	</string>
	<string name="share_boid_content">Check out Boid for Twitter!
		https://play.google.com/store/apps/details?id=com.teamboid.twitter
	</string>
	<string name="confirm_retweet">Retweet this status as @{account}?</string>
	<string name="draft_str">Draft</string>
	<string name="draft_prompt">Do you want to save this Tweet as a draft?</string>
	<string name="always_attach_loc">Always Attach Location</string>
	<string name="always_attach_loc_desc">Whether the composer will attach your location by
		default.
	</string>
	<string name="display_real_name">Display Real Name</string>
	<string name="display_real_name_desc">The full name of users are displayed in feeds, as
		opposed to screen names.
	</string>
	<string name="mention_notify_desc">When enabled, you will receive notifications for
		new mentions.
	</string>
	<string name="messages_notify_desc">When enabled, you will receive notifications for
		new direct messages.
	</string>
	<string name="vibrate_str">Vibration</string>
	<string name="vibrate_str_desc">When enabled, notifications will cause your phone
		to vibrate.
	</string>
	<string name="ringtone_str">Ringtone</string>
	<string name="ringtone_str_desc">The optional ringtone played when a notification is
		received.
	</string>
	<string name="muting_hint_keyword">Keyword or hashtag</string>
	<string name="muting_hint_app">App name</string>
	<string name="muting_hint_user">Screen name</string>
	<string name="yes_str">Yes</string>
	<string name="no_str">No</string>
	<string name="links_shortened">Links will appear shortened when sent.</string>
	<string name="will_use_twitlonger">Twitlonger will be used; media is disabled.
	</string>
	<string name="expanding_twitlonger">Expanding this TwitLonger post…</string>
	<string name="expanding_twtmore">Expanding this Twtmore post…</string>
	<string name="failed_expand_twitlonger">Something happened while expanding this TwitLonger
		post!
	</string>
	<string name="failed_expand_twtmore">Something happened while expanding this Twtmore
		post!
	</string>
	<string name="copied_str">\@{user}\'s Tweet copied to your clipboard!
	</string>
	<string name="clipboard_str">Copied to your clipboard!</string>
	<string name="successfully_deleted_status">Your Tweet was deleted!</string>
	<string name="failed_delete_status">Something happened while deleting your Tweet!
	</string>
	<string name="tweets_str">Tweets</string>
	<string name="users_str">Users</string>
	<string name="about_str">About</string>
	<string name="no_tweets">No Tweets</string>
	<string name="no_mentions">No mentions</string>
	<string name="no_messages">No messages</string>
	<string name="no_trends">No trends</string>
	<string name="no_favorites">No favorites</string>
	<string name="no_results">No results</string>
	<string name="no_media">No media</string>
	<string name="nodescription_str">(No description)</string>
	<string name="no_internet">Please connect to the internet.</string>
	<string name="error_str">Error</string>
	<string name="block_str">Block</string>
	<string name="website_str">Website</string>
	<string name="friends_str">Following</string>
	<string name="followers_str">Followers</string>
	<string name="location_str">Location</string>
	<string name="directmessage_str">Direct Message</string>
	<string name="report_str">Report</string>
	<string name="retweeted_status">Successfully retweeted @{user}\'s Tweet!</string>
	<string name="failed_retweet">Something happened while retweeting @{user}\'s
		Tweet!
	</string>
	<string name="failed_favorite">Something happened while favoriting @{user}\'s
		Tweet!
	</string>
	<string name="failed_unfavorite">Something happened while unfavoriting @{user}\'s
		Tweet!
	</string>
	<string name="edit_profile_str">Edit Profile</string>
	<string name="pin_column_str">Pin as Column</string>
	<string name="in_reply_to">In reply to @{user}</string>
	<string name="search_query_hint_str">Search Twitter</string>
	<string name="what_you_wanna_say">What\'s happening?</string>
	<string name="loading_lists">Please wait, loading your lists…</string>
	<string name="loading_savedsearches">Please wait, loading your saved searches…</string>
	<string name="savedsearch_uploaded">Saved search successfully saved to Twitter!
	</string>
	<string name="savedsearch_upload_error">Something happened while saving your saved search
		on Twitter!
	</string>
	<string name="no_lists">You don\'t have any lists!</string>
	<string name="failed_load_lists">Something happened while loading your lists!
	</string>
	<string name="lists_str">Lists</string>
	<string name="switch_accounts">Switch Accounts</string>
	<string name="account_already_added">You\'ve already added this account!</string>
	<string name="authorization_error">Failed to authorize your account!</string>
	<string name="new_tweet_str">New Tweet</string>
	<string name="favorite_str">Favorite</string>
	<string name="retweet_str">Retweet</string>
	<string name="reply_str">Reply</string>
	<string name="share_str">Share</string>
	<string name="copy_str">Copy</string>
	<string name="search_str">Search</string>
	<string name="remove_account">Remove Account</string>
	<string name="my_profile_str">My Profile</string>
	<string name="settings_str">Settings</string>
	<string name="addcolumn_str">Add Column</string>
	<string name="refresh_str">Refresh</string>
	<string name="delete_str">Delete</string>
	<string name="help_title">Help</string>
	<string name="help_description">Send feedback, donate, and view version/build
		information.
	</string>
	<string name="about_title">About</string>
	<string name="about_description">Created by Aidan Follestad, Joe Simpson, Graham
		Macphee, Philip Oakley, and Federico Zubani.
	</string>
	<string name="version_title">Version</string>
	<string name="build_title">Build Number</string>
	<string name="sendfeedback_title">Feedback</string>
	<string name="sendfeedback_description">Send questions, feature requests, and bug reports
		to Team Boid.
	</string>
	<string name="general_title">General</string>
	<string name="general_description">Common settings for modifying functionality.
	</string>
	<string name="enable_ssl_title">SSL</string>
	<string name="enable_ssl_description">Enabling allows to Boid to make a more secure, but
		slower connection to Twitter.
	</string>
	<string name="iconic_tabs_title">Iconic Tabs</string>
	<string name="iconic_tabs_description">Enabled by default; disabling displays text on
		columns instead of icons.
	</string>
	<string name="theme_title">Theme</string>
	<string name="theme_description">Boid\'s theme, modifies text and UI colors.
	</string>
	<string name="media_title">Media</string>
	<string name="profile_picture_header">Profile Pictures</string>
	<string name="enable_download">Enable Download</string>
	<string name="tweet_media_header">Tweet Media</string>
	<string name="enable_profilepic_download_desc">Enabling allows Boid to download profile pictures
		while viewing Tweets and profiles.
	</string>
	<string name="enable_media_download_desc">Enabling allows Boid to download the media held in
		Tweets while viewing a Tweet.
	</string>
	<string name="enable_drafts_title">Drafts</string>
	<string name="clear_searchhistory_title">Clear Search History</string>
	<string name="clear_searchhistory_desc">Clears your search history (that\'s accessed from
		the timeline screen\'s search interface).
	</string>
	<string name="appearance_category">Appearance</string>
	<string name="appearance_category_desc">Themes, font sizing, and other UI element settings.
	</string>
	<string name="enable_textual_list_title">Textual User Lists</string>
	<string name="enable_textual_list_desc">User list columns display their name, even with
		iconic tabs.
	</string>
	<string name="enable_textual_search_title">Textual Saved Searches</string>
	<string name="enable_textual_search_desc">Saved search columns display their query, even with
		iconic tabs.
	</string>
	<string name="enable_inline_title">Inline Previewing</string>
	<string name="enable_inline_desc">Enabling allows Boid to display image previews of
		the media contained in tweets of columns.
	</string>
	<string name="timeline_str">Timeline</string>
	<string name="media_timeline_str">Media Timeline</string>
	<string name="mentions_str">Mentions</string>
	<string name="messages_str">Messages</string>
	<string name="trends_str">Trends</string>
	<string name="favorites_str">Favorites</string>
	<string name="savedsearch_str">Saved Search</string>
	<string name="list_timeline_str">List Timeline</string>
	<string name="user_timeline_str">User Timeline</string>
	<string name="login">Login</string>
	<string name="photo_service_title">Upload Service</string>
	<string name="composer_str">Composer</string>
	<string name="composer_desc_str">Enable drafts, attaching location by default, and
		other composer options.
	</string>
	<string name="clear_str">Clear</string>
	<string name="backup_str">Backup</string>
	<string name="restore_str">Restore</string>
	<string name="my_lists_str">My Lists</string>
	<string name="donate_str">Donate</string>
	<string name="donations_appreciated">Your donations are much appreciated by the
		teenagers of Team Boid!
	</string>
	<string name="contact_sync">Contact Sync</string>
	<string name="night_mode">Night Mode</string>
	<string name="start_time_str">Start Time</string>
	<string name="end_time_str">End Time</string>
	<string name="night_mode_time_desc">The time that you consider the beginning of the
		night.
	</string>
	<string name="night_mode_endtime_desc">The time that you consider the end of the night,
		and the beginning of the day.
	</string>
	<string name="night_mode_theme_desc">The theme that Boid will switch to when night
		falls. Defaults to pure black.
	</string>
	<string name="pause_notifications">Pause Notifications</string>
	<string name="pause_notifications_desc">When enabled, you will not receive notifications
		while night mode is active.
	</string>
	<string name="manage_columns">Manage Columns</string>
	<string name="contactsync_what">What to sync</string>
	<string name="contact_sync_on">Contact Sync is turned on</string>
	<string name="contact_sync_off">Contact sync is turned off. Please note: Contact
		sync is experimental
	</string>
	<string name="reset_str">Reset</string>
	<string name="mute_timeline_str">Mute Timeline</string>
	<string name="mute_mentions_str">Mute Mentions</string>
	<string name="mute_search_str">Mute Search</string>
	<string name="notifications">Notifications</string>
	<string name="notifications_enable">Enable Notifications for this account</string>
	<string name="notification_period">Notification refresh period</string>
	<string name="welcome_str">Welcome to Boid</string>
	<string name="danger_zone">Danger Zone!</string>
	<string name="sign_in_failure">We could not sign you in. Would you like to give it another try?</string>
</resources>