<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/notifications"
		android:key="push">
		<SwitchPreference
			android:key="{user}_c2dm" android:enabled="true" android:layout="@layout/boid_preference"
			android:defaultValue="true" android:summary="@string/notifications_enable"
			android:title="@string/notifications" android:persistent="true" />
		<ListPreference android:title="@string/notification_period"
			android:key="{user}_c2dm_period" android:defaultValue="15"
			android:entryValues="@array/notifications_period_values"
			android:entries="@array/notifications_period_name" />

		<SwitchPreference
			android:key="{user}_c2dm_mention" android:defaultValue="true"
			android:enabled="true" android:layout="@layout/boid_preference"
			android:summary="@string/mention_notify_desc" android:title="@string/mentions_str"
			android:persistent="true" />
		<SwitchPreference
			android:key="{user}_c2dm_dm" android:defaultValue="true"
			android:enabled="true" android:layout="@layout/boid_preference"
			android:summary="@string/messages_notify_desc" android:title="@string/messages_str"
			android:persistent="true" />
		<SwitchPreference
			android:key="{user}_c2dm_vibrate" android:enabled="true"
			android:layout="@layout/boid_preference" android:summary="@string/vibrate_str_desc"
			android:title="@string/vibrate_str" android:persistent="true" />
		<RingtonePreference android:key="{user}_c2dm_ringtone"
			android:ringtoneType="notification" android:showSilent="true"
			android:enabled="true" android:summary="@string/ringtone_str_desc"
			android:title="@string/ringtone_str" android:persistent="true" />

	</PreferenceCategory>
	<PreferenceCategory android:title="@string/contact_sync">
		<SwitchPreference
			android:key="{user}_contactsync_on" android:summaryOn="@string/contact_sync_on"
			android:defaultValue="false" android:summaryOff="@string/contact_sync_off"
			android:title="@string/contact_sync" />
		<ListPreference android:key="{user}_contactsync_what"
			android:defaultValue="mutual" android:entryValues="@array/sync_types_values"
			android:entries="@array/sync_types" android:title="@string/contactsync_what" />
	</PreferenceCategory>
	
	<DangerPreferenceCategory android:title="@string/danger_zone">
	    
	    <Preference
	        android:key="delete"
	        android:title="@string/remove_account" />
	    
	</DangerPreferenceCategory>
</PreferenceScreen>