<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/addColumnAction" android:title="@string/addcolumn_str"
		android:icon="?addIcon" android:showAsAction="ifRoom">
		<menu>
			<item android:id="@+id/addTimelineColAction" android:title="@string/timeline_str"
				android:showAsAction="withText" android:icon="?timelineTab" />
			<item android:id="@+id/addMentionsColAction" android:title="@string/mentions_str"
				android:showAsAction="withText" android:icon="?mentionsTab" />
			<item android:id="@+id/addMessagesColAction" android:title="@string/messages_str"
				android:showAsAction="withText" android:icon="?messagesTab" />
			<item android:id="@+id/addTrendsColAction" android:title="@string/trends_str"
				android:showAsAction="withText" android:icon="?trendsTab" />
			<item android:id="@+id/addFavoritesColAction" android:title="@string/favorites_str"
				android:showAsAction="withText" android:icon="?favoritesTab" />
			<item android:id="@+id/addSavedSearchColAction" android:title="@string/savedsearch_str"
				android:showAsAction="withText" android:icon="?savedSearchTab" />
			<item android:id="@+id/addUserListColAction" android:title="@string/list_timeline_str"
				android:showAsAction="withText" android:icon="?userListTab" />
			<item android:id="@+id/addProfileFeedColAction" android:title="@string/user_timeline_str"
				android:showAsAction="withText" android:icon="?userFeedTab" />
			<item android:id="@+id/addNearbyColAction" android:title="@string/nearby_str"
				android:showAsAction="withText" android:icon="?nearbyTab" />
			<item android:id="@+id/addMediaColAction" android:title="@string/media_timeline_str"
				android:icon="?mediaTab" />
			<item android:id="@+id/addMyListsColAction" android:title="@string/my_lists_str"
				android:showAsAction="withText" android:icon="?userListTab" />
		</menu>
	</item>
	<item android:id="@+id/backupBtn" android:showAsAction="never"
		android:title="@string/backup_str" />
	<item android:id="@+id/restoreBtn" android:showAsAction="never"
		android:title="@string/restore_str" />
	<item android:id="@+id/resetBtn" android:showAsAction="never"
		android:title="@string/reset_str" />
</menu>