<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<Preference android:key="clear_search_history"
		android:summary="@string/clear_searchhistory_desc" android:title="@string/clear_searchhistory_title" />
	<SwitchPreference android:key="enable_ssl"
		android:layout="@layout/boid_preference" android:summary="@string/enable_ssl_description"
		android:title="@string/enable_ssl_title" android:persistent="true" />
	<PreferenceCategory android:key="profile_picture_category"
		android:title="@string/profile_picture_header">
		<SwitchPreference android:key="enable_profileimg_download"
			android:layout="@layout/boid_preference" android:summary="@string/enable_profilepic_download_desc"
			android:title="@string/enable_download" android:persistent="true" />
	</PreferenceCategory>
	<PreferenceCategory android:key="tweet_media_category"
		android:title="@string/tweet_media_header">
		<SwitchPreference android:key="enable_media_download"
			android:layout="@layout/boid_preference" android:summary="@string/enable_media_download_desc"
			android:title="@string/enable_download" android:persistent="true" />
		<SwitchPreference android:key="enable_inline_previewing"
			android:layout="@layout/boid_preference" android:summary="@string/enable_inline_desc"
			android:title="@string/enable_inline_title" android:persistent="true" />
	</PreferenceCategory>
</PreferenceScreen>