<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<SwitchPreference android:key="night_mode"
		android:title="@string/night_mode" android:persistent="true" />
	<ListPreference android:key="night_mode_theme"
		android:persistent="true" android:layout="@layout/boid_preference"
		android:summary="@string/night_mode_theme_desc" android:title="@string/theme_title"
		android:dialogTitle="@string/theme_title" android:entries="@array/theme_names"
		android:entryValues="@array/theme_values" android:defaultValue="3" />
	<SwitchPreference android:key="night_mode_pause_notifications"
		android:summary="@string/pause_notifications_desc" android:title="@string/pause_notifications"
		android:persistent="true" />
	<ListPreference android:key="night_mode_time"
		android:persistent="true" android:layout="@layout/boid_preference"
		android:title="@string/start_time_str" android:summary="@string/night_mode_time_desc"
		android:dialogTitle="@string/theme_title" android:entries="@array/nightmode_starttimes"
		android:entryValues="@array/nightmode_startvalues"
		android:defaultValue="20" />
	<ListPreference android:key="night_mode_endtime"
		android:persistent="true" android:layout="@layout/boid_preference"
		android:title="@string/end_time_str" android:summary="@string/night_mode_endtime_desc"
		android:dialogTitle="@string/end_time_str" android:entries="@array/nightmode_endtimes"
		android:entryValues="@array/nightmode_endvalues" android:defaultValue="7" />
</PreferenceScreen>