<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/replyAction" android:title="@string/reply_str"
		android:icon="?replyIcon" android:showAsAction="always" />
	<item android:id="@+id/favoriteAction" android:title="@string/favorite_str"
		android:icon="?unfavoriteIcon" android:showAsAction="ifRoom" />
	<item android:id="@+id/retweetAction" android:title="@string/retweet_str"
		android:icon="?retweetIcon" android:showAsAction="ifRoom" />
	<item android:id="@+id/shareAction" android:title="@string/share_str"
		android:icon="?shareIcon" android:showAsAction="ifRoom" />
	<item android:id="@+id/deleteAction" android:title="@string/delete_str"
		android:icon="?deleteIcon" android:visible="false"
		android:showAsAction="always" />
	<item android:id="@+id/copyAction" android:title="@string/copy_str"
		android:icon="?copyIcon" />
</menu>