<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:orientation="vertical">
	<ScrollView android:id="@+id/scroll" android:layout_width="match_parent"
		android:layout_height="0dp" android:layout_weight="100">
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content" android:orientation="vertical"
			android:paddingBottom="34dp" android:paddingLeft="15dp"
			android:paddingRight="15dp" android:paddingTop="15dp">
			<ViewStub android:id="@+id/replyTo" android:layout_width="match_parent"
				android:layout_height="wrap_content" android:layout="@layout/feed_item" />
			<TextView android:id="@+id/replyToText" style="?android:listSeparatorTextViewStyle"
				android:layout_width="match_parent" android:layout_height="wrap_content"
				android:text="@string/in_reply_to" android:textAllCaps="true"
				android:textSize="10sp" android:visibility="gone" />
			<TextView android:id="@+id/twitlongerUsed"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginBottom="5dp" android:text="@string/will_use_twitlonger"
				android:textColor="@color/dark" android:textStyle="italic"
				android:visibility="gone" />
			<EditText android:id="@+id/tweetContent"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:gravity="top" android:hint="@string/what_you_wanna_say"
				android:imeOptions="flagNoExtractUi" android:inputType="textMultiLine|textCapSentences"
				android:minLines="5" android:textColor="?tweetColor">
				<requestFocus />
			</EditText>

			<!-- Upload Service Config. TODO: Probably could be better UI, deffo on 
				Tablet at least -->
			<TextView android:id="@+id/upload_with_label" style="?android:listSeparatorTextViewStyle"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_marginTop="5dp" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/photo_service_title"
				android:visibility="gone" />
			<Button android:id="@+id/upload_with" style="?android:spinnerStyle"
				android:layout_width="match_parent" android:layout_height="wrap_content"
				android:visibility="gone" />

			<!-- Draft Systems -->
			<TextView android:id="@+id/draftsTitle" android:textColor="?usernameColor"
				android:layout_marginTop="10dp" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/enable_drafts_title"
				android:textAppearance="?android:attr/textAppearanceSmall" style="?android:listSeparatorTextViewStyle"
				android:visibility="gone" />
			<LinearLayout android:id="@+id/draftsArea"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="vertical" android:visibility="gone" />
		</LinearLayout>
	</ScrollView>

	<!-- Auto-completion -->
	<HorizontalScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_gravity="end|bottom"
		android:background="?sideNavColor">
		<LinearLayout android:id="@+id/autocompletion"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
			android:background="?sideNavColor" android:orientation="horizontal"
			android:visibility="gone" />
	</HorizontalScrollView>

</LinearLayout>